[gd_scene load_steps=3 format=3 uid="uid://3rpccn0yy3ul"]

[ext_resource type="Script" path="res://scripts/GUI_debug.gd" id="1_0uked"]
[ext_resource type="FontVariation" uid="uid://ghai7ln8cmyo" path="res://assets/fonts/oswald_font_variation.tres" id="1_ulp7k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uked")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.156863)

[node name="MarginContainerL" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 176.0
offset_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerL"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="disable_btn" type="Button" parent="MarginContainerL/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Disable Debugging"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainerL/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="shipThrust_label" type="Label" parent="MarginContainerL/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.756863, 0.427451, 1)
theme_override_fonts/font = ExtResource("1_ulp7k")
theme_override_font_sizes/font_size = 22
text = "Ship Forward Thrust: "

[node name="shipThrust_value" type="Label" parent="MarginContainerL/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainerL/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="worldSpeed_label" type="Label" parent="MarginContainerL/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.788235, 0.447059, 1)
theme_override_fonts/font = ExtResource("1_ulp7k")
theme_override_font_sizes/font_size = 22
text = "World Speed: "

[node name="worldSpeed_value" type="Label" parent="MarginContainerL/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="MarginContainerR" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 102.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerR"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="reset_btn" type="Button" parent="MarginContainerR/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reset Scene"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainerR/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="rotSpeed_value" type="Label" parent="MarginContainerR/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="rotSpeed_label" type="Label" parent="MarginContainerR/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.796078, 0.458824, 1)
theme_override_fonts/font = ExtResource("1_ulp7k")
theme_override_font_sizes/font_size = 22
text = " :Rotation Speed"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainerR/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="rotAngle_value" type="Label" parent="MarginContainerR/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "0"

[node name="rotAngle_label" type="Label" parent="MarginContainerR/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.839216, 0.458824, 1)
theme_override_fonts/font = ExtResource("1_ulp7k")
theme_override_font_sizes/font_size = 22
text = " :Rotation Angle"

[connection signal="pressed" from="MarginContainerL/VBoxContainer/disable_btn" to="." method="_on_disable_btn_pressed"]
